## Process this file with automake to produce Makefile.in

EXTRA_DIST	= README \
	httpd.sps			\
	run-httpd.sh			\
	\
	echod.sps			\
	run-echod.sh			\
	\
	shelld.sps			\
	run-shelld.sh			\
	\
	connect.sps			\
	run-connect.sh			\
	\
	srfi-106-echo-client.sps	\
	srfi-106-echo-server.sps

### end of file
