## Process this file with automake to produce Makefile.in

#AM_MAKEINFOFLAGS	= --no-split

EXTRA_DIST		= QUEST-FOR-ISSUE-35

info_TEXINFOS		= \
	vicare-scheme.texi		\
	vicare-libs.texi		\
	nausicaa.texi

vicare_scheme_TEXINFOS	= \
	gpl-3.0.texi			\
	macros.texi			\
	\
	overview.texi			\
	using.texi			\
	scheme.texi			\
	baselib.texi			\
	stdlib.texi			\
	exception-handlers-implementation.texi	\
	iklib.texi			\
	ffi.texi			\
	syslib.texi			\
	capi.texi			\
	objects.texi			\
	debug.texi			\
	machinery.texi			\
	compiler.texi			\
	\
	missing.texi			\
	building.texi			\
	credits.texi			\
	unicode.texi			\
	fasl.texi			\
	shmem.texi			\
	binfmt.texi			\
	history.texi			\
	references.texi

vicare_libs_TEXINFOS = \
	lang.texi				\
	\
	posix.texi				\
	glibc.texi				\
	iconv.texi				\
	linux.texi				\
	cre2.texi				\
	\
	libs-bytevectors.texi			\
	libs-char-sets.texi			\
	libs-comparisons.texi			\
	libs-knuth-morris-pratt.texi		\
	libs-levenshtein.texi			\
	libs-lists.texi				\
	libs-loops.texi				\
	libs-object-properties.texi		\
	libs-one-dimension.texi			\
	libs-randomisations.texi		\
	libs-streams.texi			\
	libs-strings.texi			\
	libs-vectors.texi			\
	libs-irregex.texi			\
	libs-pregexp.texi			\
	libs-formations.texi			\
	libs-arrays.texi			\
	\
	libs-net-channels.texi			\
	\
	srfi.texi				\
	srfi-and-let-star.texi			\
	srfi-args-fold.texi			\
	srfi-basic-format.texi			\
	srfi-basic-socket-interface.texi	\
	srfi-boxes.texi				\
	srfi-case-lambda.texi			\
	srfi-char-sets.texi			\
	srfi-compare-procedures.texi		\
	srfi-cond-expand.texi			\
	srfi-eager-comp.texi			\
	srfi-environment-variables.texi		\
	srfi-environment-inquiry.texi		\
	srfi-err5rs-records.texi		\
	srfi-error-reporting.texi		\
	srfi-general-cond.texi			\
	srfi-intermediate-format.texi		\
	srfi-hash-tables.texi			\
	srfi-lazy.texi				\
	srfi-let-values.texi			\
	srfi-lightweight-testing.texi		\
	srfi-list.texi				\
	srfi-multidimensional-array.texi	\
	srfi-parameters.texi			\
	srfi-random.texi			\
	srfi-rec.texi				\
	srfi-receive.texi			\
	srfi-records.texi			\
	srfi-shared-structures.texi		\
	srfi-specialize-procedures.texi		\
	srfi-streams.texi			\
	srfi-string-ports.texi			\
	srfi-strings.texi			\
	srfi-testing.texi			\
	srfi-time.texi				\
	srfi-vectors.texi			\
	srfi-functional-pairs.texi

nausicaa_TEXINFOS	= \
	nausicaa-language.texi			\
	nausicaa-oopp.texi			\
	nausicaa-multimethods.texi		\
	nausicaa-builtins.texi			\
	nausicaa-conditions.texi		\
	\
	nausicaa-lists.texi			\
	nausicaa-vectors.texi			\
	nausicaa-strings.texi			\
	nausicaa-arrays.texi			\
	\
	macros.texi				\
	fdl-1.3.texi				\
	gpl-3.0.texi

### end of file
