## Process this file with automake to produce Makefile.in

#AM_MAKEINFOFLAGS	= --no-split

EXTRA_DIST		= \
	QUEST-FOR-ISSUE-35				\
	\
	RFC/rfc4291.ipv6-address-achitecture.txt	\
	RFC/rfc5735.ipv4-special-use-addresses.txt	\
	RFC/rfc3986.uri.txt

info_TEXINFOS		= \
	vicare-scheme.texi			\
	vicare-libs.texi			\
	nausicaa.texi

vicare_scheme_TEXINFOS	= \
	gpl-3.0.texi				\
	macros.texi				\
	\
	overview.texi				\
	using.texi				\
	scheme.texi				\
	baselib.texi				\
	stdlib.texi				\
	exception-handlers-implementation.texi	\
	iklib.texi				\
	ffi.texi				\
	syslib.texi				\
	capi.texi				\
	objects.texi				\
	debug.texi				\
	machinery.texi				\
	compiler.texi				\
	\
	missing.texi				\
	building.texi				\
	credits.texi				\
	unicode.texi				\
	fasl.texi				\
	shmem.texi				\
	binfmt.texi				\
	history.texi				\
	references.texi

vicare_libs_TEXINFOS = \
	gpl-3.0.texi				\
	macros.texi				\
	\
	lang.texi				\
	\
	posix.texi				\
	glibc.texi				\
	iconv.texi				\
	linux.texi				\
	cre2.texi				\
	\
	libs-arguments-validation.texi		\
	libs-arrays.texi			\
	libs-bytevectors.texi			\
	libs-bytevector-compounds.texi		\
	libs-cbuffers.texi			\
	libs-char-sets.texi			\
	libs-comparisons.texi			\
	libs-debugging.texi			\
	libs-flonum-format.texi			\
	libs-flonum-parser.texi			\
	libs-formations.texi			\
	libs-getopts.texi			\
	libs-gcc.texi				\
	libs-identifier-alists.texi		\
	libs-identifier-properties.texi		\
	libs-irregex.texi			\
	libs-knuth-morris-pratt.texi		\
	libs-levenshtein.texi			\
	libs-lists.texi				\
	libs-loops.texi				\
	libs-object-properties.texi		\
	libs-one-dimension.texi			\
	libs-parser-logic.texi			\
	libs-platform.texi			\
	libs-pregexp.texi			\
	libs-queues.texi			\
	libs-randomisations.texi		\
	libs-readline.texi			\
	libs-stacks.texi			\
	libs-streams.texi			\
	libs-strings.texi			\
	libs-vectors.texi			\
	libs-weak-hashtables.texi		\
	\
	libs-parser-tools-silex.texi		\
	\
	libs-net-channels.texi			\
	\
	srfi.texi				\
	srfi-and-let-star.texi			\
	srfi-args-fold.texi			\
	srfi-basic-format.texi			\
	srfi-basic-socket-interface.texi	\
	srfi-boxes.texi				\
	srfi-case-lambda.texi			\
	srfi-char-sets.texi			\
	srfi-compare-procedures.texi		\
	srfi-cond-expand.texi			\
	srfi-eager-comp.texi			\
	srfi-environment-variables.texi		\
	srfi-environment-inquiry.texi		\
	srfi-err5rs-records.texi		\
	srfi-error-reporting.texi		\
	srfi-general-cond.texi			\
	srfi-intermediate-format.texi		\
	srfi-hash-tables.texi			\
	srfi-lazy.texi				\
	srfi-let-values.texi			\
	srfi-lightweight-testing.texi		\
	srfi-list.texi				\
	srfi-multidimensional-array.texi	\
	srfi-parameters.texi			\
	srfi-random.texi			\
	srfi-rec.texi				\
	srfi-receive.texi			\
	srfi-records.texi			\
	srfi-shared-structures.texi		\
	srfi-specialize-procedures.texi		\
	srfi-streams.texi			\
	srfi-string-ports.texi			\
	srfi-strings.texi			\
	srfi-testing.texi			\
	srfi-time.texi				\
	srfi-vectors.texi			\
	srfi-functional-pairs.texi

nausicaa_TEXINFOS	= \
	nausicaa-language.texi					\
	nausicaa-oopp.texi					\
	nausicaa-multimethods.texi				\
	nausicaa-builtins.texi					\
	nausicaa-conditions.texi				\
	nausicaa-increments.texi				\
	nausicaa-simple-match.texi				\
	nausicaa-infix.texi					\
	\
	nausicaa-containers-lists.texi				\
	nausicaa-containers-vectors.texi			\
	nausicaa-containers-strings.texi			\
	nausicaa-containers-arrays.texi				\
	nausicaa-containers-stacks.texi				\
	nausicaa-containers-queues.texi				\
	nausicaa-containers-bitvectors.texi			\
	nausicaa-containers-iterators.texi			\
	\
	nausicaa-parser-tools-source-locations.texi		\
	nausicaa-parser-tools-lexical-tokens.texi		\
	nausicaa-parser-tools-lalr.texi				\
	nausicaa-parser-tools-ip-addresses.texi			\
	nausicaa-parser-tools-uri.texi				\
	nausicaa-parser-tools-unix-pathnames.texi		\
	\
	nausicaa-uri-uri.texi					\
	nausicaa-uri-pathnames.texi				\
	\
	macros.texi						\
	fdl-1.3.texi						\
	gpl-3.0.texi

### end of file
